# CGex1

./: .gitignore  CMakeLists.txt  MyMath.h  README.md  main.cpp
assets/: README.md
docs/: report.md
shaders/: fragment2d.glsl  fragment3d.glsl  vertex2d.glsl  vertex3d.glsl
src/: BuildConfig.h.in  CMakeLists.txt
src/app/: App.cpp  App.h  main.cpp
src/core/: Shader.cpp  Shader.h
src/demo/: README.md
src/input/: InputManager.cpp  InputManager.h
src/math/: MyMath.h
src/mesh/: SimpleObj.cpp  SimpleObj.h
src/scene/: Demo2D.cpp  Demo2D.h  Demo3D.cpp  Demo3D.h  Scene.h
